[EventTiming] Allow only observing first input

This CL adds a check needed to properly produce first input
events when the PerformanceObserver is only observing
'firstInput' but not 'event'.

Bug: 898484

Change-Id: I8331b0c174a51db65a9388d67054dfbf5a7ecfba
Reviewed-on: https://chromium-review.googlesource.com/c/1296689
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602342}
Former-commit-id: f433ac52f97edc48f644d69fb4d4488a2e74f680